--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.12.9+6
   firebase_storage: ^3.1.1
   google_sign_in: ^4.1.1
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
