--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^3.1.1
   google_sign_in: ^4.1.1
   cached_network_image: ^2.2.0+1
+  getflutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
